--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -7,6 +7,11 @@
   &--bg-white {
     background-color: #fff;
   }
+
+  &--page {
+    padding-top: 15px;
+    padding-bottom: 10px;
+  }
 }
 
 .header__wrapper {
