--- a/source/pug/blocks/catalog/2_companions-cards.pug
+++ b/source/pug/blocks/catalog/2_companions-cards.pug
@@ -11,12 +11,14 @@ section.companions-content__companions.page-companions
       @Number level
 
   +companions-card-page(
-    'https://via.placeholder.com/285',
+    'img/firsova-mobile@1x.jpg',
+    'img/firsova-tablet@1x.jpg',
+    'img/firsova-desktop@1x.jpg',
     'Таня Фирсова',
-    '1.5 m',
+    '1,5 m',
     ['#ЗОЖ', '#ПП','#Фитнес','#пляж','#авокадо','#смузи'],
     {
-      'sri-lanka': 'Шри Ланка',
+      'sri-lanka': 'Шри-Ланка',
       'thailand': 'Тайланд',
       'seychelles': 'Сейшелы'
     },
@@ -24,11 +26,15 @@ section.companions-content__companions.page-companions
     fly=true,
     bus=false,
     bike=false,
-    walk=false
+    walk=false,
+    liked=true,
+    online=false
   )
 
   +companions-card-page(
-    'https://via.placeholder.com/285',
+    'img/demin-mobile@1x.jpg',
+    'img/demin-tablet@1x.jpg',
+    'img/demin-desktop@1x.jpg',
     'Петя Демин',
     '1500',
     ['#бургер','#бар','#футбол','#концерт','#крафт'],
@@ -40,11 +46,15 @@ section.companions-content__companions.page-companions
     fly=true,
     bus=true,
     bike=false,
-    walk=true
+    walk=true,
+    liked=false,
+    online=false
   )
 
   +companions-card-page(
-    'https://via.placeholder.com/285',
+    'img/smolov-mobile@1x.jpg',
+    'img/smolov-tablet@1x.jpg',
+    'img/smolov-desktop@1x.jpg',
     'Марк Смолов',
     '170',
     ['#рэп','#тату','#хайпбист','#сникеры','#суприм'],
@@ -57,11 +67,15 @@ section.companions-content__companions.page-companions
     fly=true,
     bus=false,
     bike=true,
-    walk=false
+    walk=false,
+    liked=false,
+    online=false
   )
 
   +companions-card-page(
-    'https://via.placeholder.com/285',
+    'img/rogovaya-mobile@1x.jpg',
+    'img/rogovaya-tablet@1x.jpg',
+    'img/rogovaya-desktop@1x.jpg',
     'Лариса Роговая',
     '23',
     ['#образование', '#карьера', '#учеба', '#линкедин'],
@@ -73,16 +87,7 @@ section.companions-content__companions.page-companions
     fly=true,
     bus=true,
     bike=false,
-    walk=false
+    walk=false,
+    liked=false,
+    online=true
   )
-
-  button.companions-content__more-btn(type='button') Показать еще
-
-  .companions-content__pagination.pagination
-    a.pagination__number(href='#') 1
-    a.pagination__number(href='#') 2
-    a.pagination__number(href='#') 3
-    a.pagination__number(href='#') 4
-    div.pagination__arrows
-      a.pagination__arrow.pagination__arrow--left(href='#')
-      a.pagination__arrow.pagination__arrow--right(href='#')
