--- a/source/pug/blocks/header.pug
+++ b/source/pug/blocks/header.pug
@@ -1,10 +1,17 @@
-header.header
+header(class=(pageHeader ? "header header--page" : "header"))
   .wrapper.header__wrapper
-    a.header__logo
-      picture
-        source.header__logo-tablet(media="(min-width: 768px)", srcset="img/logo-tablet-white@1x.png", type="image/png")
-        source.header__logo-desktop(media="(min-widths: 1440px)", srcset="img/logo-desktop-white@1x.png", type="image/png")
-        img.header__logo-img(src="img/logo-mobile-white@1x.png" width="100" height="19" alt="Логотип Погнали")
+    if indexLink
+      a.header__logo(href="index.html")
+        picture
+          source.header__logo-tablet(media="(min-width: 768px)", srcset="img/logo-tablet-white@1x.png", type="image/png")
+          source.header__logo-desktop(media="(min-widths: 1440px)", srcset="img/logo-desktop-white@1x.png", type="image/png")
+          img.header__logo-img(src="img/logo-mobile-white@1x.png" width="100" height="19" alt="Логотип Погнали")
+    else
+      a.header__logo(href="")
+        picture
+          source.header__logo-tablet(media="(min-width: 768px)", srcset="img/logo-tablet-white@1x.png", type="image/png")
+          source.header__logo-desktop(media="(min-widths: 1440px)", srcset="img/logo-desktop-white@1x.png", type="image/png")
+          img.header__logo-img(src="img/logo-mobile-white@1x.png" width="100" height="19" alt="Логотип Погнали")
 
     button.header__nav-btn(type='button') Мобильная навигация
 
@@ -99,6 +106,6 @@ header.header
             L11.9,7.1z')
         span.header__contacts-item-text  8 800 555-86-28
 
-      a.header__contacts-btn(href="#") Авторизация
+        a.header__contacts-btn(href="#") Авторизация
 
 
