--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -3,6 +3,7 @@ include helpers/mixins
 
 block variables
   - const title = "HTML Academy: Погнали"
+  - let pageHeader = false
 
 block content
   //- Шапка сайта
