Поправил ошибки (index, catalog) по валидатору

--- a/source/pug/form.pug
+++ b/source/pug/form.pug
@@ -10,7 +10,7 @@ block content
   include blocks/header
 
   //- Заголовок страницы
-  include blocks/page-header
+  include blocks/page-title
 
   main.site-content
 
