--- a/source/pug/blocks/catalog/1_country-filter.pug
+++ b/source/pug/blocks/catalog/1_country-filter.pug
@@ -42,7 +42,8 @@ section.companions-country-filter
         +companions-country-filter-letter('Ю', ["ЮАР","Южный Судан"])
         +companions-country-filter-letter('Я', ["Ямайка","Япония"])
 
-        ul.companions-country-filter__countries-column
-          +companions-country-filter-small(["Австралия","Австрия","Азербайджан","Албания","Алжир","Ангола","Андорра","Антигуа и Барбуда","Аргентина","Армения","Афганистан"])
+      section.companions-country-filter__countries-column
+        h5.visually-hidden Список стран
+        +companions-country-filter-small(["Австралия","Австрия","Азербайджан","Албания","Алжир","Ангола","Андорра","Антигуа и Барбуда","Аргентина","Армения","Афганистан"])
 
       button.companions-country-filter__button.companions-country-filter__button--close.companions-country-filter__button--bottom(type="button") Свернуть
